Firefox issue with CSRF attack

--- a/csrf-elgg/attacker/addfriend.html
+++ b/csrf-elgg/attacker/addfriend.html
@@ -1,6 +1,15 @@
 <html>
 <body>
 <h1>This page forges an HTTP GET request</h1>
+
 <img src="" alt="image" width="1" height="1" />
+
+<script src="" />
+
+<!-- CORS request may be blocked by recent browsers.
+     You can still use the POST request forging approach,
+     see the attack to "Edit Profile".
+-->
+
 </body>
 </html>
